RESOLVED FIXED164546
[EFL] fix error message caused by eina log
https://bugs.webkit.org/show_bug.cgi?id=164546
Summary [EFL] fix error message caused by eina log
KwangHyuk
Reported 2016-11-09 09:47:29 PST
"./WebKitBuild/Release/bin/MiniBrowser --help" caused error message below. ERR<538>:eina_log ../../Tools/MiniBrowser/efl/main.c:2399 configuration() log domain 63 was deleted
Attachments
Patch (1.31 KB, patch)
2016-11-09 10:00 PST, KwangHyuk
no flags
Archive of layout-test-results from ews115 for mac-yosemite (1.65 MB, application/zip)
2016-11-09 18:40 PST, Build Bot
no flags
KwangHyuk
Comment 1 2016-11-09 10:00:13 PST
Build Bot
Comment 2 2016-11-09 18:40:10 PST
Comment on attachment 294233 [details] Patch Attachment 294233 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/2486457 New failing tests: storage/domstorage/sessionstorage/blocked-file-access.html
Build Bot
Comment 3 2016-11-09 18:40:13 PST
Created attachment 294321 [details] Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 4 2016-11-09 19:09:50 PST
Comment on attachment 294233 [details] Patch Clearing flags on attachment: 294233 Committed r208519: <http://trac.webkit.org/changeset/208519>
WebKit Commit Bot
Comment 5 2016-11-09 19:09:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.