[EFL] fix error message caused by eina log https://bugs.webkit.org/show_bug.cgi?id=164546

Reviewed by Gyuyoung Kim.

Fix error message caused by eina log when MiniBrowser is working with help option.

* MiniBrowser/efl/main.c:
(quit):


Canonical link: https://commits.webkit.org/182244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208519 268f45cc-cd09-0410-ab3c-d52691b4dbfc